--- a/src/main/resources/templates/backend/menuadd.html
+++ b/src/main/resources/templates/backend/menuadd.html
@@ -31,78 +31,48 @@
 
 			<div class="form form-horizontal">
 				<div class="row cl">
-					<label class="form-label col-xs-4 col-sm-3">栏目ID：</label>
-					<div class="formControls col-xs-8 col-sm-9">11230</div>
-				</div>
-				<div class="row cl">
-					<label class="form-label col-xs-4 col-sm-3">
-						<span class="c-red">*</span>
-						上级栏目：</label>
-					<div class="formControls col-xs-8 col-sm-9">
-						<span class="select-box">
-						<select class="select" id="sel_Sub" name="sel_Sub" onchange="SetSubID(this);">
-							<option value="0">顶级分类</option>
-							<option value="10">分类一级</option>
-							<option value="101">&nbsp;&nbsp;├ 分类二级</option>
-							<option value="102">&nbsp;&nbsp;├ 分类二级</option>
-							<option value="20">分类一级</option>
-							<option value="200">&nbsp;&nbsp;├ 分类二级</option>
-						</select>
-						</span>
-					</div>
-					<div class="col-3">
-					</div>
-				</div>
-				<div class="row cl">
-					<label class="form-label col-xs-4 col-sm-3">
-						<span class="c-red">*</span>
-						分类名称：</label>
-					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" class="input-text" value="" placeholder=""  name=""/>
-					</div>
-					<div class="col-3">
-					</div>
-				</div>
-				<div class="row cl">
-					<label class="form-label col-xs-4 col-sm-3">别名：</label>
-					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" class="input-text" value="" placeholder=""  name=""/>
-					</div>
-					<div class="col-3">
-					</div>
-				</div>
-				<div class="row cl">
-					<label class="form-label col-xs-4 col-sm-3">目录：</label>
-					<div class="formControls col-xs-8 col-sm-9">
-						<input type="text" class="input-text" value="" placeholder=""  name=""/>
-					</div>
-					<div class="col-3">
-					</div>
-				</div>
-				<div class="row cl">
-					<label class="form-label col-xs-4 col-sm-3">内容类型：</label>
+					<label class="form-label col-xs-4 col-sm-3">菜单类型：</label>
 					<div class="formControls col-xs-8 col-sm-9">
 						<span class="select-box">
 						<select name="" class="select">
-							<option value="1">文章</option>
-							<option value="2">图片</option>
-							<option value="3">商品</option>
-							<option value="4">视频</option>
-							<option value="5">专题</option>
-							<option value="6">链接</option>
+							<option value="1">父类菜单</option>
+							<option value="2">子类菜单</option>
 						</select>
 						</span>
 					</div>
 					<div class="col-3">
 					</div>
 				</div>
+
 				<div class="row cl">
-					<label class="form-label col-xs-4 col-sm-3">是否生成静态html：</label>
-					<div class="formControls col-xs-8 col-sm-9 skin-minimal">
-						<div class="check-box">
-							<input type="checkbox" id="checkbox-pinglun"/>
-							<label for="checkbox-pinglun">&nbsp;</label>
-						</div>
+					<label class="form-label col-xs-4 col-sm-3">
+						<span class="c-red">*</span>父类菜单：</label>
+					<div class="formControls col-xs-8 col-sm-9">
+						<span class="select-box">
+						<select name="" class="select">
+						</select>
+						</span>
+					</div>
+					<div class="col-3">
+					</div>
+				</div>
+
+				<div class="row cl">
+					<label class="form-label col-xs-4 col-sm-3">
+						<span class="c-red">*</span>
+						url：</label>
+					<div class="formControls col-xs-8 col-sm-9">
+						<input type="text" class="input-text" value="" placeholder=""  name=""/>
+					</div>
+					<div class="col-3">
+					</div>
+				</div>
+
+				<div class="row cl">
+					<label class="form-label col-xs-4 col-sm-3">
+						<span class="c-red">*</span>菜单名称：</label>
+					<div class="formControls col-xs-8 col-sm-9">
+						<input type="text" class="input-text" value="" placeholder=""  name=""/>
 					</div>
 					<div class="col-3">
 					</div>
@@ -153,6 +123,7 @@ $(function(){
 			parent.layer.close(index);
 		}
 	});
+
 });
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
