--- a/src/main/resources/templates/backend/menumanager.html
+++ b/src/main/resources/templates/backend/menumanager.html
@@ -85,6 +85,9 @@
 <script type="text/javascript" src="lib/My97DatePicker/4.8/WdatePicker.js"></script>
 <script type="text/javascript" src="lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="lib/laypage/1.2/laypage.js"></script>
+
+<script type="text/javascript" src="custom/js/eduRequest.js"></script>
+
 <script type="text/javascript">
     $('.table-sort').dataTable({
         "aaSorting": [[1, "desc"]],//默认第几个排序
@@ -110,18 +113,31 @@
         var cateid = $(obj).parents("tr").children("td").eq(1).text();
 
         layer.confirm('确认要删除吗？', function (index) {
-            $.ajax({
-                type: 'POST',
-                url: '',
-                dataType: 'json',
-                success: function (data) {
-                    $(obj).parents("tr").remove();
-                    layer.msg('已删除!', {icon: 1, time: 1000});
-                },
-                error: function (data) {
-                    console.log(data.msg);
-                },
-            });
+            // $.ajax({
+            //     type: 'POST',
+            //     url: '',
+            //     dataType: 'json',
+            //     success: function (data) {
+            //         $(obj).parents("tr").remove();
+            //         layer.msg('已删除!', {icon: 1, time: 1000});
+            //     },
+            //     error: function (data) {
+            //         console.log(data.msg);
+            //     },
+            // });
+
+            var callback = function (data) {
+                layer.msg(data.msg, {icon: 1, time: 1000});
+                $(obj).parents("tr").remove();
+            };
+
+            var failBack = function (data) {
+                layer.msg(data.msg, {icon: 1, time: 1000});
+            };
+
+            var params = {};
+
+            deRequestDelete("menudelete/" + cateid, params, callback, failBack);
         });
     }
 </script>
